<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/_101dp"
        android:layout_height="@dimen/_101dp"
        android:layout_marginTop="@dimen/_130dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:layout_marginTop="@dimen/_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:layout_marginTop="@dimen/_5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:text="Log in"
        android:layout_marginStart="@dimen/_32dp"
        android:layout_marginEnd="@dimen/_32dp"
        android:layout_marginTop="@dimen/_10dp"
        android:textSize="@dimen/_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField3" />

    <Button
        android:id="@+id/btnRegisterRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create new account"
        android:textSize="@dimen/_16sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>